--- a/todo
+++ b/todo
@@ -1,2 +1,2 @@
 TODO Add Set/Get Array
-TODO Create Mutate Functions lighten, darken etc.
+TODO* Create Mutate Functions lighten, darken etc. (low Priority?)
